--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,12 +5,17 @@
                 <img src="{{ '/assets/images/nexus-logo.png' | relative_url }}" alt="nexus. Group AI Logo">
             </a>
         </div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <ul class="nav-links">
             <li><a href="{{ '/about.html' | relative_url }}">Our Story</a></li>
             <li><a href="{{ '/services.html' | relative_url }}">What We Do</a></li>
             <li><a href="{{ '/contact.html' | relative_url }}">Contact Us</a></li>
-            <li><a href="#" class="btn">Join Waiting List</a></li>
-            <li><a href="#" class="btn">Request a Demo</a></li>
+            <li><a href="https://forms.gle/LLMPqERfm5QWVsLKA" target="_blank" class="btn">Join Waiting List</a></li>
+            <li><a href="http://meet.nexus-group.ai/" target="_blank" class="btn">Request a Demo</a></li>
         </ul>
     </div>
 </nav>
